--- a/notebook/2. MODEL TRAINING.ipynb
+++ b/notebook/2. MODEL TRAINING.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "b080dfb2",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "e11c6255",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "e7e412a2",
    "metadata": {},
    "outputs": [
@@ -183,7 +183,7 @@
        "4                    none          76             78             75  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "56d72fde",
    "metadata": {},
    "outputs": [],
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "cd613177",
    "metadata": {},
    "outputs": [
@@ -317,7 +317,7 @@
        "4                    none             78             75  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "f237ea14",
    "metadata": {},
    "outputs": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "924b7f9d",
    "metadata": {},
    "outputs": [],
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "ffc69816",
    "metadata": {},
    "outputs": [
@@ -395,7 +395,7 @@
        "Name: math_score, Length: 1000, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "1e290fe3",
    "metadata": {},
    "outputs": [],
@@ -419,7 +419,7 @@
     "from sklearn.compose import ColumnTransformer\n",
     "\n",
     "numeric_transformer = StandardScaler()\n",
-    "oh_transformer = OneHotEncoder()\n",
+    "oh_transformer = OneHotEncoder(drop='first')\n",
     "\n",
     "preprocessor = ColumnTransformer(\n",
     "    [\n",
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "9c68f99a",
    "metadata": {},
    "outputs": [],
@@ -441,17 +441,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "72459f1d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1000, 19)"
+       "(1000, 14)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,17 +462,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "ed5c4e99",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((800, 19), (200, 19))"
+       "((800, 14), (200, 14))"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "id": "8c247bd0",
    "metadata": {},
    "outputs": [],
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "id": "79ccb8e7",
    "metadata": {
     "scrolled": false
@@ -547,27 +547,27 @@
       "\n",
       "Ridge\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 5.3233\n",
+      "- Root Mean Squared Error: 5.3235\n",
       "- Mean Absolute Error: 4.2650\n",
       "- R2 Score: 0.8743\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 5.3904\n",
-      "- Mean Absolute Error: 4.2111\n",
-      "- R2 Score: 0.8806\n",
+      "- Root Mean Squared Error: 5.3936\n",
+      "- Mean Absolute Error: 4.2125\n",
+      "- R2 Score: 0.8805\n",
       "===================================\n",
       "\n",
       "\n",
       "K-Neighbors Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 5.7172\n",
-      "- Mean Absolute Error: 4.5270\n",
-      "- R2 Score: 0.8550\n",
+      "- Root Mean Squared Error: 5.5780\n",
+      "- Mean Absolute Error: 4.4640\n",
+      "- R2 Score: 0.8620\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 7.2553\n",
-      "- Mean Absolute Error: 5.6280\n",
-      "- R2 Score: 0.7837\n",
+      "- Root Mean Squared Error: 7.4075\n",
+      "- Mean Absolute Error: 5.7470\n",
+      "- R2 Score: 0.7745\n",
       "===================================\n",
       "\n",
       "\n",
@@ -578,61 +578,61 @@
       "- R2 Score: 0.9997\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 8.1052\n",
-      "- Mean Absolute Error: 6.4550\n",
-      "- R2 Score: 0.7300\n",
+      "- Root Mean Squared Error: 8.3624\n",
+      "- Mean Absolute Error: 6.6200\n",
+      "- R2 Score: 0.7126\n",
       "===================================\n",
       "\n",
       "\n",
       "Random Forest Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 2.2664\n",
-      "- Mean Absolute Error: 1.8178\n",
-      "- R2 Score: 0.9772\n",
+      "- Root Mean Squared Error: 2.2857\n",
+      "- Mean Absolute Error: 1.8369\n",
+      "- R2 Score: 0.9768\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 5.9564\n",
-      "- Mean Absolute Error: 4.6351\n",
-      "- R2 Score: 0.8542\n",
+      "- Root Mean Squared Error: 5.9752\n",
+      "- Mean Absolute Error: 4.6449\n",
+      "- R2 Score: 0.8533\n",
       "===================================\n",
       "\n",
       "\n",
       "XGBRegressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 1.0073\n",
-      "- Mean Absolute Error: 0.6875\n",
-      "- R2 Score: 0.9955\n",
+      "- Root Mean Squared Error: 1.0509\n",
+      "- Mean Absolute Error: 0.7101\n",
+      "- R2 Score: 0.9951\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 6.4733\n",
-      "- Mean Absolute Error: 5.0577\n",
-      "- R2 Score: 0.8278\n",
+      "- Root Mean Squared Error: 6.5248\n",
+      "- Mean Absolute Error: 5.0785\n",
+      "- R2 Score: 0.8250\n",
       "===================================\n",
       "\n",
       "\n",
       "CatBoosting Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 3.0427\n",
-      "- Mean Absolute Error: 2.4054\n",
-      "- R2 Score: 0.9589\n",
+      "- Root Mean Squared Error: 3.0951\n",
+      "- Mean Absolute Error: 2.4445\n",
+      "- R2 Score: 0.9575\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 6.0086\n",
-      "- Mean Absolute Error: 4.6125\n",
-      "- R2 Score: 0.8516\n",
+      "- Root Mean Squared Error: 6.0456\n",
+      "- Mean Absolute Error: 4.6335\n",
+      "- R2 Score: 0.8498\n",
       "===================================\n",
       "\n",
       "\n",
       "AdaBoost Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 5.8712\n",
-      "- Mean Absolute Error: 4.8215\n",
-      "- R2 Score: 0.8471\n",
+      "- Root Mean Squared Error: 5.8481\n",
+      "- Mean Absolute Error: 4.7675\n",
+      "- R2 Score: 0.8483\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 6.1108\n",
-      "- Mean Absolute Error: 4.7561\n",
-      "- R2 Score: 0.8465\n",
+      "- Root Mean Squared Error: 6.1588\n",
+      "- Mean Absolute Error: 4.8150\n",
+      "- R2 Score: 0.8441\n",
       "===================================\n",
       "\n",
       "\n"
@@ -686,6 +686,109 @@
     "    \n",
     "    print('='*35)\n",
     "    print('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "a6f64968",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model Name</th>\n",
+       "      <th>R2_Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Ridge</td>\n",
+       "      <td>0.880451</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Linear Regression</td>\n",
+       "      <td>0.880433</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Random Forest Regressor</td>\n",
+       "      <td>0.853277</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>CatBoosting Regressor</td>\n",
+       "      <td>0.849801</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>AdaBoost Regressor</td>\n",
+       "      <td>0.844122</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Lasso</td>\n",
+       "      <td>0.825320</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>XGBRegressor</td>\n",
+       "      <td>0.825046</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>K-Neighbors Regressor</td>\n",
+       "      <td>0.774507</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Decision Tree</td>\n",
+       "      <td>0.712622</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Model Name  R2_Score\n",
+       "2                    Ridge  0.880451\n",
+       "0        Linear Regression  0.880433\n",
+       "5  Random Forest Regressor  0.853277\n",
+       "7    CatBoosting Regressor  0.849801\n",
+       "8       AdaBoost Regressor  0.844122\n",
+       "1                    Lasso  0.825320\n",
+       "6             XGBRegressor  0.825046\n",
+       "3    K-Neighbors Regressor  0.774507\n",
+       "4            Decision Tree  0.712622"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(list(zip(model_list, r2_list)), columns=['Model Name', 'R2_Score']).sort_values(by=[\"R2_Score\"],ascending=False)"
    ]
   },
   {
